# PicFind

./: .gitignore  README.md  app.py  pyproject.toml
docs/: architecture.md  model-comparison.md  query-behavior.md  todo.md  troubleshooting-warnings.md
docs/decisions/: 0001-mvp-shape.md  0002-documentation-policy.md  0003-local-gpu-strategy.md  0004-web-ui.md  0005-heic-support.md  0006-model-loading-compatibility.md  0007-korean-query-translation.md  0008-warning-policy.md  0009-preset-strategy.md  0010-caption-command.md  0011-caption-vectorization.md
src/picfind/: __init__.py  captioner.py  cli.py  config.py  db.py  embedding.py  image_io.py  indexer.py  models.py  query_text.py  search.py  web.py
src/picfind.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
